<resources>
    <string name="app_name">December14</string>
    <string name="ErrorMsgAdd">Error al agregar usuario</string>
    <string name="ErrorMsgRemove">Error al eliminar el usuario</string>
    <string name="ErrorMsgUpdate">Error al actualizar el usuario</string>
    <string name="MsgDataNotFound">El usuario no fue encontrado</string>
    <string name="ErrorAProduct">Error al agregar un producto</string>
    <string name="ErrorRProducto">Error al eliminar producto</string>
    <string name="ErrorUProduct">Erros al actualizar el producto</string>
    <string name="ErrorAddOrder">Error al añadir la orden</string>
    <string name="ErrorRemoveOrder">Error al eliminar la orden</string>
    <string name="ErrorUpdateOrder">Error al actualizar la orden</string>
    <string name="btnNextLog_main">Iniciar Sesión</string>
    <string name="btnAcept_login">Aceptar</string>
    <string name="btnForgotPassword_login">¿Olvidó su contraseña?</string>
    <string name="btnRegis_main">Registro</string>
    <string name="txt_Registro">Registro</string>
    <string name="btnSave_register">Guardar</string>
    <string name="btnHome_home">Inicio</string>
    <string name="btnmenu_home">Menú</string>
    <string name="btnCart_home">Carrito</string>
    <string name="btnProfile_home">Perfil</string>
    <string name="select_op1">Seleccionar</string>
    <string name="select_opc2">Seleccionar</string>
    <string name="select_opc3">Seleccionar</string>
    <string name="select_opc4">Seleccionar</string>
    <string name="btnHome_Menu">Inicio</string>
    <string name="btnmenu_Menu">Menu</string>
    <string name="btncart_Menu">Carrito</string>
    <string name="btnBackto_Cart">Seguir comprando</string>
    <string name="btn_PayCart">Realizar pago</string>
    <string name="txtTotalCart">Total</string>
    <string name="btnRecover_recover">Recuperar</string>
    <string name="btnforgotpass_login">¿Olvidó su contraseña?</string>
    <string name="btnacept_Register">Aceptar</string>
    <string name="btnEditProfile_Profile">Editar Perfil</string>
    <string name="btnLogout_Profile">Cerrar Sesión</string>
    <string name="btnBack_register">Volver al inicio</string>
    <string name="btnSave_edit">Guardar Cambios</string>
    <string name="btnCancel_edit">Cancelar</string>
    <string name="btnHome_Edit">Inicio</string>
    <string name="btnCart_Edit">Carrito</string>
    <string name="btnMenu_Edit">Menú</string>
    <string name="txtName_edit">Nombre</string>
    <string name="txtPhone_edit">Telefono</string>
    <string name="txtEmail_edit">Correo Electronico</string>
    <string name="btnProfile_edit">Perfil</string>
    <string name="txtAlert_Register">Campos Obligatorios!</string>
    <string name="txtAlert_Login">Contraseña o correo incorrectos</string>
</resources>